--- a/public/css/common.css
+++ b/public/css/common.css
@@ -303,41 +303,10 @@ header.opaque {
     align-items: center;
     text-align: center;
     color: white;
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-blend-mode: overlay;
-    background-color: transparent;
     padding-top: 25dvh;
     padding-bottom: 40dvh;
     height: 100dvh;
     transition: background 0.3s ease;
-}
-
-.hero-section.gradient::after {
-    --R: 255;
-    --G: 255;
-    --B: 255;
-    content: "";
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 40%;
-    background-image: linear-gradient(0deg,
-        rgba(var(--R), var(--G), var(--B), 1) 0%,
-        rgba(var(--R), var(--G), var(--B), 0.738) 19%,
-        rgba(var(--R), var(--G), var(--B), 0.541) 34%,
-        rgba(var(--R), var(--G), var(--B), 0.382) 47%,
-        rgba(var(--R), var(--G), var(--B), 0.278) 56.5%,
-        rgba(var(--R), var(--G), var(--B), 0.194) 65%,
-        rgba(var(--R), var(--G), var(--B), 0.126) 73%,
-        rgba(var(--R), var(--G), var(--B), 0.075) 80.2%,
-        rgba(var(--R), var(--G), var(--B), 0.042) 86.1%,
-        rgba(var(--R), var(--G), var(--B), 0.021) 91%,
-        rgba(var(--R), var(--G), var(--B), 0.008) 95.2%,
-        rgba(var(--R), var(--G), var(--B), 0.002) 98.2%,
-        rgba(var(--R), var(--G), var(--B), 0) 100%
-    );
 }
 
 .hero-section > h2 {
@@ -422,6 +391,40 @@ footer {
     padding: 0;
     border: 0;
     outline: none;
+}
+
+.backgrounded {
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-blend-mode: overlay;
+    background-color: transparent;
+}
+
+.gradient::after {
+    --R: 255;
+    --G: 255;
+    --B: 255;
+    content: "";
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 40%;
+    background-image: linear-gradient(0deg,
+        rgba(var(--R), var(--G), var(--B), 1) 0%,
+        rgba(var(--R), var(--G), var(--B), 0.738) 19%,
+        rgba(var(--R), var(--G), var(--B), 0.541) 34%,
+        rgba(var(--R), var(--G), var(--B), 0.382) 47%,
+        rgba(var(--R), var(--G), var(--B), 0.278) 56.5%,
+        rgba(var(--R), var(--G), var(--B), 0.194) 65%,
+        rgba(var(--R), var(--G), var(--B), 0.126) 73%,
+        rgba(var(--R), var(--G), var(--B), 0.075) 80.2%,
+        rgba(var(--R), var(--G), var(--B), 0.042) 86.1%,
+        rgba(var(--R), var(--G), var(--B), 0.021) 91%,
+        rgba(var(--R), var(--G), var(--B), 0.008) 95.2%,
+        rgba(var(--R), var(--G), var(--B), 0.002) 98.2%,
+        rgba(var(--R), var(--G), var(--B), 0) 100%
+    );
 }
 
 .lat-pad-L {
