from node.js to php backend

--- a/index.css
+++ b/index.css
@@ -1,9 +1,9 @@
 .hero-section {
-    background-image: url("../images/todd-quackenbush-XBxQZLNBM0Q-unsplash.jpg");
+    background-image: url("images/todd-quackenbush-XBxQZLNBM0Q-unsplash.jpg");
 }
 
 .intro-section {
-    background-image: url("../images/hu-chen-60XLoOgwkfA-unsplash.jpg");
+    background-image: url("images/hu-chen-60XLoOgwkfA-unsplash.jpg");
 }
 
 .contact-form {
